...
            appBar: AppBar(),
            body: Form(
              key: _formKey,
              child: Column(
                children: [
                  TextFormField(
                    key: const Key('email_id'),
                    controller: txtEmail,
                    validator: (value) => Validator.validateEmail(value!),
                  ),
                  TextFormField(
                    key: const Key('password'),
                    controller: txtPassword,
                    validator: (value) => Validator.validatePassword(value!),
                  ),
                  ElevatedButton(
                    onPressed: () {
                      if (_formKey.currentState!.validate()) {
...
