...
class _HomeScreenState extends State<HomeScreen> {
  @override
  Widget build(BuildContext context) {
    return BlocBuilder<DashboardCubit, DashboardState>(
      builder: (context, dashboardState) {
        return Scaffold(
          key: const Key('home_screen'),
          appBar: AppBar(
            title: const Text('Home Screen'),
          ),
          body: dashboardState.status == DashboardStatus.loading ||
                  dashboardState.status == DashboardStatus.initial
              ? const CircularProgressIndicator(
...
